<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationActivity">

    <!--TOOLBAR-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/toolbar">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/LightThemeToolbarTitle"
            android:text="@string/accountInformationActivityTitle" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--IMAGE-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat7"
                style="@style/unifiedPadding"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/round_c"
                    android:src="@drawable/ic_launcher_foreground" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--FIRST NAME-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat8"
                style="@style/layouts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat7">

                <TextView
                    style="@style/txtView"
                    android:text="@string/firstNameTxtView" />

                <TextView
                    android:id="@+id/firstName"
                    style="@style/txtView" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--LAST NAME-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat9"
                style="@style/layouts"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat8">

                <TextView
                    style="@style/txtView"
                    android:text="@string/lastNameTxtView" />

                <TextView
                    android:id="@+id/lastName"
                    style="@style/txtView" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--GENDER-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat10"
                style="@style/layouts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat9">

                <TextView
                    style="@style/txtView"
                    android:text="@string/genderTxtView" />

                <TextView
                    android:id="@+id/gender"
                    style="@style/txtView" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--EMAIL-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat11"
                style="@style/layouts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat10">

                <TextView
                    style="@style/txtView"
                    android:text="@string/emailTxtView" />

                <TextView
                    android:id="@+id/email"
                    style="@style/txtView" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--SKILL-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat13"
                style="@style/layouts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat11">

                <TextView
                    style="@style/txtView"
                    android:text="@string/learnSubjectSpinner" />

                <TextView
                    android:id="@+id/skill"
                    style="@style/txtView" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--NEWSLETTER-->
            <androidx.appcompat.widget.LinearLayoutCompat
                style="@style/layouts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat13">

                <TextView
                    style="@style/txtView"
                    android:text="Subscribed To News Letter?" />

                <TextView
                    android:id="@+id/isSubscribed"
                    style="@style/txtView"
                    android:layout_marginBottom="50dp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>